# slam-study

./: .gitignore  README.md
g2o_data_fitting/src/: g2o_data_fitting.cc
g2o_example/g2o_data_fitting/: CMakeLists.txt  README.md
g2o_example/g2o_data_fitting/include/: g2o_data_fitting.hpp
gtsam_example/imu_factors/: CMakeLists.txt
gtsam_example/imu_factors/include/: imu_factors.hpp
gtsam_example/imu_factors/src/: imu_factors.cc  imu_factors_test.cc
gtsam_example/localization/: CMakeLists.txt
gtsam_example/localization/include/: localization.hpp
gtsam_example/localization/src/: localization.cc  localization_test.cc
simple_graph_optimization/: CMakeLists.txt  README.md  package.xml  ws_build.sh  ws_run.sh
simple_graph_optimization/include/simple_graph_optimization/: alias_tpyes.h  pose_graph_optimizer.hpp  sim_model.hpp  simple_graph_optimization.hpp
simple_graph_optimization/launch/: simple_graph_optimization.py
simple_graph_optimization/rviz/: simple_graph_optimization.rviz
simple_graph_optimization/src/: pose_graph_optimizer.cpp  sim_model.cpp  simple_graph_optimization.cpp
slam_book_example/3d_rigid_body_motion/coordinate_transform/: CMakeLists.txt  coordinate_transform.cc
slam_book_example/3d_rigid_body_motion/displaying_camera_pose/: CMakeLists.txt  displaying_camera_pose.cc
slam_book_example/3d_rigid_body_motion/plot_trajectory/: CMakeLists.txt  plot_trajectory.cc
slam_book_example/3d_rigid_body_motion/use_eigen/: CMakeLists.txt  eigen_matrix.cc
slam_book_example/3d_rigid_body_motion/use_geometry/: CMakeLists.txt  use_geometry.cc
slam_book_example/cameras_and_images/image_basics/: CMakeLists.txt  images_basics.cc
slam_book_example/cameras_and_images/rgbd_vision/: CMakeLists.txt  rgbd_vision.cc
slam_book_example/cameras_and_images/stereo_vision/: CMakeLists.txt  stereo_vision.cc
slam_book_example/cameras_and_images/undistort_image/: CMakeLists.txt  undistort_image.cc
slam_book_example/lie_group_algebra/trajectory_error/: CMakeLists.txt  trajectory_error.cc
slam_book_example/lie_group_algebra/use_sophus/: CMakeLists.txt  use_sophus.cc
visual_slam_review/: README.md
visual_slam_review/fundamental_essential_matrix/: CMakeLists.txt  fundamental_essential_matrix.cc
visual_slam_review/keypoint_descriptor/: CMakeLists.txt  keypoint_descriptor.cc
visual_slam_review/least_square/: CMakeLists.txt  gauss_newton.cc
